[gd_scene load_steps=9 format=3 uid="uid://cwnu7uqhvqget"]

[ext_resource type="Script" path="res://entities/cards/card.gd" id="1_qsebi"]
[ext_resource type="Texture2D" uid="uid://bfqkkkvr8vann" path="res://common/assets/card-00.png" id="2_0842r"]
[ext_resource type="Texture2D" uid="uid://0mtp47huxdbl" path="res://common/assets/All_Fire_Bullet_Pixel_16x16.png" id="3_ig83n"]
[ext_resource type="Theme" uid="uid://bd2ywkhckumtv" path="res://theme/theme.tres" id="4_1cqq1"]

[sub_resource type="Animation" id="Animation_bh1h8"]
resource_name = "activate"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"activate_effect"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2of2l"]
_data = {
"activate": SubResource("Animation_bh1h8")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_74f6h"]
size = Vector2(100, 128)

[sub_resource type="CircleShape2D" id="CircleShape2D_r788x"]

[node name="Card" type="CharacterBody2D"]
collision_layer = 256
collision_mask = 0
input_pickable = true
script = ExtResource("1_qsebi")
state_effect = 2

[node name="BackgroundSprie" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_0842r")
offset = Vector2(2.08165e-12, 2.08165e-12)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(2.08165e-12, -16)
scale = Vector2(2, 2)
texture = ExtResource("3_ig83n")
hframes = 40
vframes = 25
frame = 600

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2of2l")
}

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -44.0
offset_top = -58.0
offset_right = 44.0
offset_bottom = 58.0
mouse_filter = 2

[node name="Title" type="RichTextLabel" parent="Control"]
texture_filter = 1
layout_mode = 0
offset_right = 88.0
offset_bottom = 17.0
mouse_filter = 2
theme = ExtResource("4_1cqq1")
theme_override_font_sizes/normal_font_size = 14
text = "Title"

[node name="Description" type="RichTextLabel" parent="Control"]
texture_filter = 1
layout_mode = 0
offset_top = 58.0
offset_right = 88.0
offset_bottom = 116.0
mouse_filter = 2
theme = ExtResource("4_1cqq1")
theme_override_font_sizes/normal_font_size = 10
text = "Description here..."

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 100
shape = SubResource("RectangleShape2D_74f6h")

[node name="BattlefieldDetectionArea" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="BattlefieldDetectionArea"]
shape = SubResource("CircleShape2D_r788x")
debug_color = Color(0.843137, 0, 0.917647, 0.419608)

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="area_entered" from="BattlefieldDetectionArea" to="." method="_on_battlefield_detection_area_area_entered"]
[connection signal="area_exited" from="BattlefieldDetectionArea" to="." method="_on_battlefield_detection_area_area_exited"]
